# GenBrain

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_engine.py  test_linker.py  test_questioner.py  test_summary.py  test_tags.py
data/: notes.json
data/chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
genbrain_core/: engine.py  file_parser.py  linker.py  questioner.py  summarizer.py  tagger.py  vector_store.py
src/: engine.py  summarizer.py  tagger.py
src/genbrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
